--- a/index.html
+++ b/index.html
@@ -7,6 +7,34 @@
             .height-normal {
                 height: 30px;
             }
+            .card-list {
+                list-style-type: none;
+                padding: 0;
+                display: flex;
+                flex-wrap: wrap;
+                gap: 16px;
+            }
+
+            .card-list li {
+                background-color: #fff;
+                border: 1px solid #ddd;
+                border-radius: 8px;
+                box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+                padding: 16px;
+                width: calc(33.333% - 16px); /* Adjust the width as needed */
+                box-sizing: border-box;
+            }
+
+            .card-list li a {
+                text-decoration: none;
+                color: #333;
+                font-weight: bold;
+            }
+
+            .card-list li:hover {
+                text-decoration: underline;
+                cursor: pointer;
+            }
         </style>
     </head>
     <body>
@@ -22,7 +50,10 @@
             <button id="loadSites" class="height-normal">Load Sites</button>
         </div>
         <div>
-            <ul id="sites">
+            <div>
+                click below link to get token, if you can not find your site, please check the CDCSiteConfig from backoffice make sure it is configured for the site
+            </div>
+            <ul id="sites" class="card-list">
             </ul>
         </div>
     </body>
