--- a/welcome.html
+++ b/welcome.html
@@ -44,10 +44,10 @@
         <div id="data"></div>
         <br>
         <br>
-        <div style="color:coral; font-weight: bold;">
-            Note:
-            Once you have logged in from CDC, you will be redirected to this page and have no opportunity to log out.
-            If you want to fetch token for another user, you need to clear the browser cache or use incognito mode.
+        <div style="color:coral; font-weight: bold; font-size: large;">
+            <div>Want to Logout?</div>
+            <div>Once you have logged in from CDC, you will be redirected to this page and have no opportunity to log out.
+            If you want to fetch token for another user, you need to clear the browser cache or use incognito mode.</div>
         </div>
     </body>
 </html>
