--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div style="margin-top: 30px;">
             <select id="env" style="width: 200px;" class="height-normal">
             </select>
-            <input id="baseSiteUrl" type="text" placeholder="Enter base site url" style="width: 480px;" class="height-normal">
+            <input id="baseSiteUrl" type="text" placeholder="https://{host:port}/occ/v2/basesites" style="width: 480px;" class="height-normal">
             <button id="loadSites" class="height-normal">Load Sites</button>
         </div>
         <div>
